# HDD-Crew

./: .env.txt  README.md  pyproject.toml
src/base/: llms.py
src/video_cataloging/: crew.py  main.py  report.md  validated_titles.md
src/video_cataloging/config/: agents.yaml  tasks.yaml
src/video_cataloging/models/: models.py
src/video_cataloging/tools/: get_next_video.py  get_video_list_summary.py  group_videos_by_genre.py  save_collated.py  update_video_list.py  video_collector.py
